Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12254

Follow symbol in "#import <.....>" doesn't work

XMLWordPrintable

    • ee200a7be0f783c2886cf0c92546540b0eec16b4

      F2 on e.g. #import <Foundation/NSString.h> does not work, even though F2 on #include <Foundation/NSString.h> does work, and even also on #import "Foundation/NSString.h"

        For Gerrit Dashboard: QTCREATORBUG-12254
        # Subject Branch Project Status CR V

            erikv Erik Verbruggen
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes