C++: fix follow-symbol-under-cursor for #import <xyz>

Task-number: QTCREATORBUG-12254
Change-Id: I4179c78f3ce6bf2236f8375da1765122a974118c
Reviewed-by: Eike Ziller <eike.ziller@digia.com>
Reviewed-by: Nikolai Kosjar <nikolai.kosjar@digia.com>